--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@
 }
 html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 *,
 *:before,
@@ -58,27 +59,40 @@ section {
   box-shadow: 5px 5px 0px rgba(0, 0, 0, 1); /* horizontal offset | vertical offset | blur radius | spread radius | color */
 }
 
+.button:hover {
+  scale: 1.1;
+  background-color: var(--primary-color);
+  color: var(--white-color);
+  box-shadow: 5px 5px 0px rgba(0, 0, 0, 0); 
+  transform: scale(1.11); 
+}
+
 .button {
   padding: 0.5rem 1rem;
   background-color: var(--purple-color);
-  color:  var(--primary-color);
+  color: var(--primary-color);
   border: #1e1e1e solid 3px;
   font-family: var(--secondary-font);
   text-transform: uppercase;
   display: inline-block; /* Establece el botón como un elemento en línea con bloque */
   width: fit-content;
-  margin: 0 auto;
+  /* margin: 0 auto; */
+  box-shadow: 5px 5px 0px rgba(0, 0, 0, 1); 
+  transition: transform 0.3s ease-in-out; /
 }
 /* NAVBAR----------------------------------- */
 .navbar {
   display: flex;
   justify-content: space-around;
-  padding: 2rem;
+  padding: 1.5rem;
   font-weight: var(--large-weight);
 }
 .navlist {
   display: flex;
   gap: 2rem;
+}
+.nav-link:hover {
+  scale: 1.1;
 }
 /* HEADER------------------------------------- */
 header {
@@ -90,15 +104,16 @@ header {
   font-size: 60px;
   opacity: 0;
   animation: fadeIn 2s ease-in-out forwards;
+  line-height: 1;
 }
 
 @keyframes fadeIn {
   0% {
-    opacity: 0; 
-    transform: translateY(+20px); 
+    opacity: 0;
+    transform: translateY(+20px);
   }
   100% {
-    opacity: 1; 
+    opacity: 1;
     transform: translateY(0);
   }
 }
@@ -106,35 +121,33 @@ header {
 .header-image {
   position: absolute;
   display: flex;
-  height: 40rem;
+  width: 40rem;
+  top: 4rem;
+  left: 25%;
+  opacity: 0;
+  animation: fadeIn 1s ease-in-out forwards;
 }
 
-.img-container {
-  position: absolute; /* Establece la posición absoluta para el contenedor de la imagen */
-  top: 8rem; /* Ajusta la posición desde la parte superior */
-  left: 25%; /* Centra la imagen horizontalmente */
-}
-
-.header-image {
-  width: 40rem; /* Ajusta el ancho de la imagen según sea necesario */
-  height: auto; /* Mantiene la proporción de aspecto de la imagen */
-}
 .shadow {
   filter: drop-shadow(
     0px 4px 60px rgba(255, 255, 0, 0.3)
   ); /* Aplica un efecto de sombra con filtro de color amarillo */
 }
+
+/* .navbar-shadow {
+  box-shadow: 0 4px 10px -1px rgba(255, 165, 0, 0.2);
+} */
+
 /* NOSOTROS --------------------------------- */
 .parrafo {
-  width: 60%;
-  text-align: start;
-  margin: 0 auto;
+  font-weight: var(--mid-weight);
+  line-height: 1.4rem;
 }
 .nosotros-container > h2 {
   text-align: start;
 }
 .nosotros-container {
-  height: 50vh;
+  height: auto;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   background-color: var(--green-color);
@@ -143,7 +156,12 @@ header {
   border-radius: 20px;
 }
 
+.nosotro-info > a {
+  align-self: start;
+}
 .nosotro-info {
+  text-align: start;
+  width: 80%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -154,4 +172,22 @@ header {
   font-size: 30px;
   text-align: start;
   text-transform: uppercase;
+}
+/* PLATILLOS------------------ */
+.platillos-container {
+  height: 100vh;
+  display: flex;
+  gap: 1rem;
+}
+.product-card {
+  width: auto;
+  height: 18rem;
+  background-color: #853636;
+  border-radius: 10px;
+  }
+.product-card:nth-child(odd) {
+  margin-top: 3rem; 
+}
+.product-img{
+  width: 10rem;
 }
