--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,8 @@ section {
   color: var(--white-color);
   box-shadow: 5px 5px 0px rgba(0, 0, 0, 0); 
   transform: scale(1.11); 
+  cursor: pointer;
+
 }
 
 .button {
@@ -79,7 +81,7 @@ section {
   width: fit-content;
   /* margin: 0 auto; */
   box-shadow: 5px 5px 0px rgba(0, 0, 0, 1); 
-  transition: transform 0.3s ease-in-out; /
+  transition: transform 0.3s ease-in-out; 
 }
 .card {
   width: auto;
@@ -103,6 +105,7 @@ section {
 }
 .nav-link:hover {
   scale: 1.1;
+  cursor: pointer;
 }
 /* HEADER------------------------------------- */
 header {
@@ -247,4 +250,66 @@ header {
   line-height: 2;
   margin-top: 2rem;
   
+}
+
+
+/* CONTACTO---------- */
+label {
+ font-weight: var(--large-weight);
+ margin-bottom: 1rem;
+}
+input {
+  width: 100%;
+  padding: .2rem;
+  font-family: var(--primary-font);
+
+}
+textarea{
+  font-family: var(--primary-font);
+  padding: .2rem;
+}
+.form-card {
+  text-align: start;
+  height: auto;
+  max-height: 18rem;
+  width: fit-content;
+  padding: 1rem;
+  margin: 0 auto;
+  background-color: var(--green-color);
+  color: var(--primary-color); 
+}
+
+.contacto-msj{
+  margin-bottom: 2rem;
+}
+
+/* styles.css */
+
+.contacto-container {
+  position: relative;
+  min-height: 100vh;
+  overflow: hidden;
+  border-radius: 10px;
+  margin-bottom: 4rem;
+}
+
+.contacto-container::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url(/public/assets/restaurant.webp);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: blur(5px);
+  opacity: 0.2; /* Ajusta la opacidad del fondo */
+  z-index: 1; /* Asegura que el pseudo-elemento esté detrás del contenido */
+}
+
+.contacto-container > * {
+  position: relative;
+  z-index: 2; /* Asegura que el contenido esté por encima del pseudo-elemento */
 }
